# tiez-clipboard

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  package-lock.json  package.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build-platforms.yml  release.yml
src/: App.tsx  locales.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  database.rs  main.rs
src-tauri/src/app/: setup.rs  window_manager.rs
src-tauri/src/app/commands/: clipboard_cmd.rs  hotkey_cmd.rs  settings_cmd.rs  system_cmd.rs
src-tauri/src/app/hooks/: mod.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/repository/: clipboard_repo.rs  migrations.rs  tag_repo.rs
src-tauri/src/infrastructure/windows_api/: drag_drop.rs
src-tauri/src/services/: backup.rs  clipboard_listener.rs  clipboard_ops.rs  cloud_sync.rs  image_analysis.rs  mod.rs  mqtt_sub.rs
src-tauri/src/services/clipboard/: mod.rs  pipeline.rs  utils.rs
src-tauri/src/services/file_transfer/: utils.rs
src/features/app/: types.ts
src/features/app/hooks/: useAppState.ts
src/features/clipboard/components/: ClipboardItem.tsx  VirtualClipboardList.tsx
src/features/settings/components/: AdvancedSettingsWindow.tsx  SettingsFooter.tsx  SettingsPanel.tsx
src/features/settings/components/groups/: ClipboardSettingsGroup.tsx  DataSettingsGroup.tsx
src/features/settings/hooks/: useSettingsPanelProps.ts
src/features/theme-store/: api.ts
src/shared/components/: UpdateDialog.tsx
src/shared/config/: fork.ts
src/shared/hooks/: useAnnouncements.ts  useAutoUpdate.ts  useHotkeyConfig.ts  useSettingsPostInit.ts
src/styles/components/: clipboard-item.css
