[package]
name = "tiez-app"
version = "0.3.6"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "tiez-app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
portable = []
devtools = ["tauri/devtools"]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10", features = ["macos-private-api", "tray-icon", "image-png", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
base64 = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }

arboard = "3"
clipboard-rs = "0.2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "gif", "webp"] }
rqrr = "0.10"
tokio = { version = "1", features = ["time"] }
tauri-plugin-dialog = "2.6"
tauri-plugin-global-shortcut = "2.3.1"
window-vibrancy = "0.7.1"
rumqttc = { version = "0.25.1", default-features = false, features = ["websocket", "use-rustls-no-provider", "url"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "0.26"
rayon = "1.10"

regex = "1.12.2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
axum = { version = "0.8.8", features = ["multipart", "ws", "macros"] }
local-ip-address = "0.6.8"
tokio-util = { version = "0.7.18", features = ["io"] }
futures = "0.3.31"
axum-extra = { version = "0.12.5", features = ["multipart"] }
uuid = { version = "1.19.0", features = ["v4"] }
mime_guess = "2.0.5"
urlencoding = "2.1.3"
tauri-plugin-fs = "2.4.5"
tauri-plugin-http = "2"
tauri-plugin-autostart = "2"
machine-uid = "0.5"
sha2 = "0.10"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "stream"] }
windows-version = "0.1.1"
dotenvy = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-foundation = { version = "0.3.2", features = ["NSData", "NSDictionary", "NSObject", "NSString", "NSArray", "NSURL"] }
objc2-app-kit = { version = "0.3.2", features = ["NSBitmapImageRep", "NSImage", "NSImageRep", "NSWorkspace", "NSPasteboard", "NSRunningApplication", "NSWindow"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Foundation", "Globalization", "Graphics_Imaging", "Media_Ocr", "Storage", "Storage_Streams", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_ProcessStatus", "Win32_System_Threading", "Win32_System_WinRT", "Win32_UI_Shell", "Win32_UI_Input_KeyboardAndMouse", "Win32_Graphics_Dwm", "Win32_System_LibraryLoader", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_UI_Controls", "Win32_Security_Cryptography", "Win32_UI_Accessibility", "Win32_UI_Input_Ime", "Win32_Globalization", "Win32_Graphics_Gdi", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_Ole", "Win32_System_SystemServices", "Win32_Storage_FileSystem"] }
windows-core = "0.61"
windows-version = "0.1.1"
winreg = "0.55.0"

# ============ Release 体积优化 ============
[profile.release]
# 启用 LTO (Link Time Optimization) - 可减少约 10-20% 体积
lto = true
# 使用单个 codegen unit，更好的优化但编译更慢
codegen-units = 1
# 优化级别：s = 优化大小，z = 更激进的大小优化
opt-level = "s"
# 移除符号表和调试信息
strip = true
# 启用 panic = abort 减少 unwinding 代码
panic = "abort"
